--- a/config/config.yaml
+++ b/config/config.yaml
@@ -66,7 +66,7 @@ split:
 
 # Processing options
 processing:
-  normalization: "minmax"  # 0-1 scaling
+  normalization: "standard"  # scaling
   sequence_stride: 1       # Overlapping windows
   per_user_sequences: true # Don't mix users
   
